# Engine

./: .gitignore  .gitmodules  README.md
Editor/: CMakeLists.txt
Editor/assets/shaders/: basic.glsl  shader.glsl
Editor/assets/shaders/cached/: shader.glsl.cached_opengl.frag  shader.glsl.cached_opengl.vert  shader.glsl.cached_vulkan.frag  shader.glsl.cached_vulkan.vert
Editor/include/: EditorLayer.h
Editor/include/EditorScene/: EditorScene.h  EditorSceneCamera.h
Editor/include/Panels/: InspectorPanel.h  SceneHierarchyPanel.h  ViewportPanel.h
Editor/include/UI/: Command.h  DeleteEntityCommand.h  DuplicateEntityCommand.h  EntityCommands.h  UndoManager.h
Editor/src/: EditorApp.cpp  EditorLayer.cpp
Editor/src/EditorScene/: EditorScene.cpp  EditorSceneCamera.cpp
Editor/src/Panels/: InspectorPanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp
Editor/src/UI/: DeleteEntityCommand.cpp  DuplicateEntityCommand.cpp  UndoManager.cpp
Engine/: CMakeLists.txt
Engine/cmake/: assimp.cmake  entt.cmake  glad.cmake  glfw.cmake  glm.cmake  glslang.cmake  imgui.cmake  shaderc.cmake  spdlog.cmake  spirv-cross.cmake  spirv-headers.cmake  spirv-tools.cmake  stb.cmake
Engine/include/Core/: Application.h  Assert.h  Buffer.h  CommandQueue.h  Core.h  Input.h  KeyCodes.h  Log.h  MouseCodes.h  Timestep.h  UUID.h  Window.h
Engine/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Engine/include/ImGui/: ImGuiLayer.h
Engine/include/Loader/: MeshLoader.h  TextureLoader.h
Engine/include/Platform/GLFW/: GLFWInput.h  GLFWWindow.h
Engine/include/Platform/OpenGL/: OpenGLContext.h  OpenGLFrameBuffer.h  OpenGLIndexBuffer.h  OpenGLShader.h  OpenGLTexture.h  OpenGLTexture2D.h  OpenGLTextureCube.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h
Engine/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
Engine/include/Platform/X11/: X11Window.h
Engine/include/Renderer/: Camera.h  Context.h  FrameBuffer.h  FrameBufferPool.h  IndexBuffer.h  Material.h  MaterialInstance.h  Mesh.h  RenderCommandQueue.h  Renderer.h  RendererAPI.h  Shader.h  ShaderLibrary.h  ShaderUniform.h  Texture.h  Texture2D.h  TextureCube.h  Uniforms.h  VertexArray.h  VertexBuffer.h
Engine/include/Scene/: Components.h  Entity.h  Entity.inl  Scene.h  SceneCamera.h  Systems.h
Engine/src/Core/: Application.cpp  CommandQueue.cpp  LayerStack.cpp  Log.cpp  UUID.cpp  Window.cpp
Engine/src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
Engine/src/Loader/: MeshLoader.cpp  TextureLoader.cpp
Engine/src/Platform/GLFW/: GLFWInput.cpp  GLFWWindow.cpp
Engine/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLTexture2D.cpp  OpenGLTextureCube.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Engine/src/Platform/X11/: X11Window.cpp
Engine/src/Renderer/: Camera.cpp  Context.cpp  FrameBuffer.cpp  FrameBufferPool.cpp  IndexBuffer.cpp  Material.cpp  MaterialInstance.cpp  Mesh.cpp  RenderCommandQueue.cpp  Renderer.cpp  Shader.cpp  ShaderLibrary.cpp  ShaderUniform.cpp  Texture.cpp  Texture2D.cpp  TextureCube.cpp  VertexArray.cpp  VertexBuffer.cpp
Engine/src/Scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp  Systems.cpp
Renderer/: CMakeLists.txt
Renderer/cmake/: spdlog.cmake
Renderer/include/: EntryPoint.h
Renderer/include/Core/: Application.h  EntryPoint.h  Layer.h  LayerStack.h  Window.h
Renderer/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Renderer/src/: Application.cpp
Renderer/src/Core/: Application.cpp  Layer.cpp  Window.cpp
Renderer/src/Platform/GLFW/: GLFWWindow.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: shader.glsl
Sandbox/include/: ExampleLayer.h
Sandbox/src/: ExampleLayer.cpp  SandBoxApp.cpp
Sandbox/test/: ExampleLayer.cpp  ExampleLayer.h
pch/: pch.h
